@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-EBUILD emacs-updater-9999.ebuild 911 RMD160 75cac2c6bb93d3bc65ffd37f31c7c5c7281a0f19 SHA1 1a93211fd4f2fcbbb7b6809c2ff57710e19aa7c2 SHA256 7bdb7e43a87e05d8e5e3df673cb31a26a712b87aeb6c438e06ea64a78172c147
-MISC ChangeLog 1095 RMD160 6679051ab5dfe3f771670b8da278a1928aab31d2 SHA1 33c8ee684dad1a27b68dff82f2830db1a25e93eb SHA256 73f379adc690b808a50b4e2ca260dbeb7630df264a9cfe8329b92531d02e785e
-MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
+EBUILD emacs-updater-9999.ebuild 901 SHA256 893bc22a4b94fedc4824967d16adddcc479d95d1a5f452ed0b9bb9e069b8e7ab SHA512 a76f3f840c0c70789620d7fe9d0db4e6d57014ca549111dea6de62586bbe2930b2c30033157031a5f8dc450d8672ef0106babfc6bf34a704d1964c5f056eaa60 WHIRLPOOL f67b2ee034e48baacc8d1624dea82e43745ee30485a34803ed0d793914a964eae1679d0a1ffc0af900c1274d187eacc3d9c260c73f71d41a6a8f313375a563e0
+MISC ChangeLog 1248 SHA256 946f7ff7013b584b9b6dc9536f0b0901f11090ce725cd2909c49e768431434db SHA512 0fbcae3c0a74d3a3c541168e287fe285e34ae39ccf8f4d20d0a1a6e009f521c5c2790952aa69eaf96a2d7a06d2396cf892e1d9c112049766a9e269ef17da407a WHIRLPOOL 57a943a1f25d1f997fd0e92f70de54e9c173ff01c30d98700f58d31ad808ce18815c59176b35693a2e0164423ea42a055922ff1acf56b47ea1100abed66bb47a
+MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP01I2AAoJEDxpGckxwJCBexEP/3LL0hM5b8kq17BnevDg/a1M
-dzP8IvjYQoAJHg+m5W8YsiggV+xBp3GcnrwN2AUVCCSDIMovX2RbRp4paDLXFVjr
-yOPuLHcRpSBj7/zpOGmiRKm3dAWfeiWnw6eDW/m2cPIpALTpssP/AM86HMekcsFr
-uW+xX4e4w/nWlRiYUMwwFFRJTY5AGf8oNE3rRprJ+0RtdjQqbVgzLj7klIdrzwe4
-N3aV09PcAOwetrWy4SDLzGuK6oQ3Ic2QCvooPK7NQxnZyDmMP2EOjq8mnzdlIIyo
-KCs7kFPUQfHE8bejLfXccfgsDQoVM/0ttap7CSDLUcfbDh+czbY6jlvekQ8pazwZ
-3x49FVyYXl7/307BHsbG4c9vekHfA4v8OGiWi4WDsd7BdIehFsvNXtpxLv7oeco5
-Gbh3ySLvyNRnegmaxihlWVRmni8o00sffaQdk9KArh6p4c5kR3TO8ACD7icZD8Fb
-OkCtQV0dKIOypR6xEGzb76pPBDDi88R56BKSp6eUYNm4npP+5rIJoi0/WXdhLkN9
-oqZc1nrPuhi3SKEDhKOZjK+jWuNLeJwfuzkVgWqMBAEmVEWMv0AzWWtiNGmDjRHK
-ZfpwL2CkSdH3BonBr+qnVSNiUHQ5W2uRWHofxfAKzjtGWmKeF3fu6+7YresdgOZB
-9gVcBiotERNTxWffdoOU
-=XCzt
+iQIcBAEBCAAGBQJQc0LzAAoJEDxpGckxwJCBGvAQAKs8rv6iuoy8UnvVrAJ2fdR+
+/d8GbRRxxwEtlM5FKNir0aUoG6jjaJRfweKlgWYiyxQC48ilPYNZY7ZxGrpPAcIl
+Bo3zYRkkjmSGtwYQTfufddzwrYbziZvBgs+DoKjE/W0uyoJ0rmXwWF8ccYb6pPx0
+XTWlYnaZ8VbwQ53OLb8LHqJqpL/WMf+7uHBHHKRMqFf8ASWCvKk8MVvGL9HAKMbT
+8RHwQc2ROYu/3ze8f8FXyBoivcve8Rprlss8f9PE6uADc7upVzACtBwCu//iba1u
+Ayb71NOO8r3uP1zaIfnRD2pef4Nwr7e4BIt6PSbf1iU8UDPJ7UkTCToexLSlfHGX
+7Q7BChLiOJ9mDEdXK6wO0WyuSUpcsBg9HEv6/NA98Qeroe35/pOJSrAlr3Jy1RLd
+zALTgXO6Mxa0ATHWbIy+l9laVw6Qh6/KAUnkBuoB0re8j6dujnygv8MnNzo3WQXY
+nN9dsyqtTdaCf6Q1wJ+xhZFRK6em974vMP0zu1sAcXhGBLRGJUkvDyvZnO8Zrlbz
+dSJLswvB/OfA0XxMQVX5H55mJunY5QgSNusg08NxTBwCe7WEnKL0F0ZyA7Bdcch2
+O2ULmSN/ZJlHulapTnRWNZoWkMVSVRs3jM+RgKteMiwoXBAPHlV5CQgcnBji9XYn
+lzTIJdVkKar+fvoy6qjz
+=s/PI
 -----END PGP SIGNATURE-----
