@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Oct 2012; Ulrich Müller <ulm@gentoo.org> emacs-updater-9999.ebuild:
+  Update version of portage-utils dependency. Specify LICENSE more precisely.
+
   09 Jun 2012; Ulrich Müller <ulm@gentoo.org> emacs-updater-9999.ebuild:
   Change live ebuild to use Git. Merge changes from Portage tree.
 
